config/ingress-test/5-ingress-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-nodeport
  namespace: ingress-nginx
  annotations:
   metallb.universe.tf/address-pool: default
spec:
  ports:
    - name: service
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  type: LoadBalancer
