config/ingress-test/6-tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: tomcat
 labels:
  app: tomcat
spec:
 selector:
  matchLabels:
   app: tomcat
 template:
  metadata:
   labels:
    app: tomcat
  spec:
   containers:
   - name: tomcat
     image: tomcat:8.0
     ports:
     - name: tomcat
       containerPort: 8080 

---

apiVersion: v1
kind: Service
metadata:
 name: tomcat
spec:
 ports:
 - name: tomcat
   port: 8080
   targetPort: tomcat
 selector:
  app: tomcat
